webinar&co: ensure images dont get stretched

--- a/src/webinar.scss
+++ b/src/webinar.scss
@@ -59,6 +59,7 @@ article {
 
   img {
     width: 100%;
+    height: auto;
     object-fit: cover;
     padding: 0 2rem 0 2rem;
   }
